# VapourSynth-RIFE-ncnn-Vulkan

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: CI.yml  release.yml
RIFE/: plugin.cpp  rife.cpp  rife.h  rife_flow_tta_avg.comp.hex.h  rife_flow_tta_temporal_avg.comp.hex.h  rife_ops.h  rife_out_tta_temporal_avg.comp.hex.h  rife_postproc.comp.hex.h  rife_postproc_tta.comp.hex.h  rife_preproc.comp.hex.h  rife_preproc_tta.comp.hex.h  rife_v2_flow_tta_avg.comp.hex.h  rife_v2_flow_tta_temporal_avg.comp.hex.h  rife_v4_timestep.comp.hex.h
models/rife-4.3/: flownet.param
models/rife-v3.9_ensembleFalse_fastTrue/: flownet.param
models/rife-v3.9_ensembleTrue_fastFalse/: flownet.param
models/rife-v4.11_ensembleTrue/: flownet.param
models/rife-v4.12_lite_ensembleTrue/: flownet.param
models/rife-v4.13_ensembleFalse_fastTrue/: README.md
models/rife-v4.13_lite_ensembleTrue/: flownet.param
models/rife-v4.14_ensembleFalse/: flownet.param
models/rife-v4.14_ensembleTrue/: flownet.param
models/rife-v4.14_lite_ensembleFalse/: flownet.param
models/rife-v4.14_lite_ensembleTrue/: flownet.param
models/rife-v4.16_lite_ensembleFalse/: flownet.param
models/rife-v4.17_lite_ensembleTrue/: flownet.param
models/rife-v4.18_ensembleFalse/: flownet.param
models/rife-v4.19_beta_ensembleTrue/: flownet.param
models/rife-v4.1_ensembleTrue_fastFalse/: flownet.param
models/rife-v4.20_ensembleFalse/: flownet.param
models/rife-v4.20_ensembleTrue/: flownet.param
models/rife-v4.21_ensembleFalse/: flownet.param
models/rife-v4.22_lite_ensembleFalse/: flownet.param
models/rife-v4.23_beta_ensembleFalse/: flownet.param
models/rife-v4.24_ensembleFalse/: flownet.param
models/rife-v4.24_ensembleTrue/: flownet.param
models/rife-v4.25-lite_ensembleFalse/: flownet.param
models/rife-v4.25_ensembleFalse/: flownet.param
models/rife-v4.25_heavy_beta_ensembleFalse/: flownet.param
models/rife-v4.26-large_ensembleFalse/: flownet.param
models/rife-v4.2_ensembleTrue_fastFalse/: flownet.param
models/rife-v4.3/: flownet.param
models/rife-v4.4_enbembleFalse_fastTrue/: flownet.param  rife44-sim-opt-fp16.param
models/rife-v4.4_enbembleTrue_fastFalse/: flownet.param
models/rife-v4.5_ensembleFalse/: flownet.param
models/rife-v4.5_ensembleTrue/: flownet.param
models/rife-v4.6_ensembleFalse/: flownet.param
models/rife-v4.6_ensembleTrue/: flownet.param
models/rife-v4.7_ensembleTrue/: flownet.param
models/rife-v4.8_ensembleFalse/: flownet.param
models/rife-v4.9_ensembleTrue/: flownet.param
models/sudo_rife4_ensembleFalse_fastTrue/: flownet.param
models/sudo_rife4_ensembleTrue_fastFalse/: flownet.param
models/sudo_rife4_ensembleTrue_fastTrue/: flownet.param
pkgconfig/: openmp.pc  vulkan-headers.pc  vulkan.pc
